feat(chart): 感情の波(折れ線)を追加\n\n- UI: 波パネル/凡例/期間切替(7/30/90日)を追加\n- Canvas描画: 全イベントのトレンド線 + 出勤/退勤ポイント色分け\n- レスポンシブ対応: リサイズ時に再描画\n- /api/logs を利用して期間内データ取得

--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,24 @@
           <!-- filled by app.js -->
         </div>
       </section>
+
+      <section class="panel md-card" id="wave-panel">
+        <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:8px">
+          <h2 style="margin:0">感情の波</h2>
+          <div class="chart-legend">
+            <span class="legend-item"><span class="legend-dot" style="background:var(--in-color)"></span>出勤</span>
+            <span class="legend-item"><span class="legend-dot" style="background:var(--out-color)"></span>退勤</span>
+            <div class="legend-range">
+              <button id="wave-7" class="btn">7日</button>
+              <button id="wave-30" class="btn btn--filled">30日</button>
+              <button id="wave-90" class="btn">90日</button>
+            </div>
+          </div>
+        </div>
+        <div class="chart">
+          <canvas id="wave-canvas" height="260"></canvas>
+        </div>
+      </section>
     </main>
 
     <div id="toast" class="toast md-card" role="status" aria-live="polite"></div>
